bk_ida/gccida/c1/print_exp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:662:14: error: expected ';' at end of declaration
void *__ptr32 *v16; // rax 
             ^
             ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:676:12: error: expected expression
*( _OWORD *)v24 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:676:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v24 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:678:12: error: expected expression
*( _OWORD *)v22 = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:678:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)v22 = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:708:16: error: use of undeclared identifier 'off_607A24'
sprintf( str, &off_607A24[1], *( _DWORD *)&x[1]); 
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:714:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:733:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:740:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:741:7: error: use of undeclared identifier 'off_6B2B5B'
v12 = off_6B2B5B; 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:745:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( __int64)x[1]; 
                ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:756:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:805:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:810:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:846:20: error: use of undeclared identifier 'unk_6D4017'
v24[1] = ( char *)&unk_6D4017; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:850:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:855:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:860:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/sched-vis.c:865:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v22[1] = ( rtx)x[1]; 
               ^~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/print_exp/src/obj/sched-vis.o] Error 1
